# Automated-Tank-Gauge-Data-Processing-and-Reporting-Tool

./: .gitignore  README.md
cpp_protocol/: CMakeLists.txt
cpp_protocol/include/: server_communication.h  tank_gauge_protocol.h
cpp_protocol/src/: main.cpp  server_communication.cpp  tank_gauge_protocol.cpp
cpp_protocol/tests/: test_protocol.cpp
python_tool/: main.py  requirements.txt
python_tool/data/: sample_tank_data.csv
python_tool/reports/: tank_gauge_report.json
python_tool/src/: __init__.py  tank_gauge_processor.py  visualizer.py
python_tool/tests/: test_tank_gauge_processor.py
